Search in list view

--- a/crud-example/CRUDExample/Views/Persons/Index.cshtml
+++ b/crud-example/CRUDExample/Views/Persons/Index.cshtml
@@ -4,7 +4,28 @@
     ViewBag.Title = "Persons";
 }
 
+<form action="~/persons/index" method="get">
 <h1>Persons</h1>
+
+<div class="box flex">
+    <div class="flex-1">
+        <select class="form-input" name="searchBy">
+            @foreach (var field in ViewBag.SearchFields)
+            {
+                <option value="@field.Key">@field.Value</option>
+            }
+        </select>
+    </div>
+
+    <div class="flex-1">
+        <input type="search" id="Search" class="form-input" placeholder="Search" name="searchString"/>
+    </div>
+
+    <div class="flex-1">
+        <button class="button button-blue-back">Search</button>
+        <a href="~/persons/index" class="link-hover">Clear all</a>
+    </div>
+</div>
 <table class="table w-100 mt">
     <thead>
         <tr>
@@ -34,3 +55,4 @@
         }
     </tbody>
 </table>
+</form>
