--- a/crud-example/CRUDExample/Views/Persons/Index.cshtml
+++ b/crud-example/CRUDExample/Views/Persons/Index.cshtml
@@ -5,54 +5,60 @@
 }
 
 <form action="~/persons/index" method="get">
-<h1>Persons</h1>
+    <h1>Persons</h1>
 
-<div class="box flex">
-    <div class="flex-1">
-        <select class="form-input" name="searchBy">
-            @foreach (var field in ViewBag.SearchFields)
-            {
-                <option value="@field.Key">@field.Value</option>
-            }
-        </select>
-    </div>
+    <div class="box flex">
+        <div class="flex-1">
+            <select class="form-input" name="searchBy">
+                @foreach (var field in ViewBag.SearchFields)
+                {
+                    if (field.Key == ViewBag.CurrentSearchBy)
+                    {
+                        <option value="@field.Key" selected="selected">@field.Value</option>
+                    }
+                    else{
+                        <option value="@field.Key">@field.Value</option>
+                    }
+                }
+            </select>
+        </div>
 
-    <div class="flex-1">
-        <input type="search" id="Search" class="form-input" placeholder="Search" name="searchString"/>
-    </div>
+        <div class="flex-1">
+            <input type="search" id="Search" class="form-input" placeholder="Search" name="searchString" value="@ViewBag.CurrentSearchString" />
+        </div>
 
-    <div class="flex-1">
-        <button class="button button-blue-back">Search</button>
-        <a href="~/persons/index" class="link-hover">Clear all</a>
+        <div class="flex-1">
+            <button class="button button-blue-back">Search</button>
+            <a href="~/persons/index" class="link-hover">Clear all</a>
+        </div>
     </div>
-</div>
-<table class="table w-100 mt">
-    <thead>
-        <tr>
-            <th>Name</th>
-            <th>Email</th>
-            <th>Date of birth</th>
-            <th>Age</th>
-            <th>Gender</th>
-            <th>Country</th>
-            <th>Address</th>
-            <th>Receive newsletters</th>
-        </tr>
-    </thead>
-    <tbody>
-        @foreach (PersonResponse person in Model)
-        {
+    <table class="table w-100 mt">
+        <thead>
             <tr>
-                <td>@person.PersonName</td>
-                <td>@person.PersonEmail</td>
-                <td>@person.DateOfBirth?.ToString("dd-MM-yyyy")</td>
-                <td>@person.Age</td>
-                <td>@person.Gender</td>
-                <td>@person.Country</td>
-                <td>@person.Address</td>
-                <td>@person.ReceiveNewsLetters</td>
+                <th>Name</th>
+                <th>Email</th>
+                <th>Date of birth</th>
+                <th>Age</th>
+                <th>Gender</th>
+                <th>Country</th>
+                <th>Address</th>
+                <th>Receive newsletters</th>
             </tr>
-        }
-    </tbody>
-</table>
+        </thead>
+        <tbody>
+            @foreach (PersonResponse person in Model)
+            {
+                <tr>
+                    <td>@person.PersonName</td>
+                    <td>@person.PersonEmail</td>
+                    <td>@person.DateOfBirth?.ToString("dd-MM-yyyy")</td>
+                    <td>@person.Age</td>
+                    <td>@person.Gender</td>
+                    <td>@person.Country</td>
+                    <td>@person.Address</td>
+                    <td>@person.ReceiveNewsLetters</td>
+                </tr>
+            }
+        </tbody>
+    </table>
 </form>
