--- a/crud-example/CRUDExample/Views/Persons/Index.cshtml
+++ b/crud-example/CRUDExample/Views/Persons/Index.cshtml
@@ -35,7 +35,9 @@
     <table class="table w-100 mt">
         <thead>
             <tr>
-                <th>Name</th>
+                <th>
+                    <a href="~/persons/index?searchBy=@ViewBag.CurrentSearchBy&searchString=@ViewBag.CurrentSearchString&sortBy=@nameof(PersonResponse.PersonName)&sortOrder=@SortOrderOptions.Descending">Name</a>
+                </th>
                 <th>Email</th>
                 <th>Date of birth</th>
                 <th>Age</th>
