Form tag helpers

--- a/crud-example/CRUDExample/Views/Persons/Index.cshtml
+++ b/crud-example/CRUDExample/Views/Persons/Index.cshtml
@@ -4,10 +4,10 @@
     ViewBag.Title = "Persons";
 }
 
-<form action="~/persons/index" method="get">
+<form asp-controller="Person" asp-action="Index" method="get">
     <h1>Persons</h1>
 
-    <a href="~/persons/create" class="link-hover">Create Person</a>
+    <a asp-controller="Persons" asp-action="Create" class="link-hover">Create Person</a>
     <div class="box flex">
         <div class="flex-1">
             <select class="form-input" name="searchBy">
@@ -30,7 +30,7 @@
 
         <div class="flex-1">
             <button class="button button-blue-back">Search</button>
-            <a href="~/persons/index" class="link-hover">Clear all</a>
+            <a asp-controller="Persons" asp-action´="Index" class="link-hover">Clear all</a>
         </div>
     </div>
     <table class="table w-100 mt">
@@ -102,3 +102,14 @@
         </tbody>
     </table>
 </form>
+
+@*
+    Tag Helpers
+    For <a> and <form> - asp-controller, asp-action, asp-route-x, asp-route, asp-area
+    For <input>, <textarea> and <label> - asp-for
+    For <select> - asp-for and asp-items
+    For <img> - asp-append-version
+    For <script> - asp-fallback-src and asp-fallback-test
+    For <span> - asp-validation-for
+    For <div> - asp-validation-summary
+*@
