--- a/crud-example/CRUDExample/Views/Shared/_Layout.cshtml
+++ b/crud-example/CRUDExample/Views/Shared/_Layout.cshtml
@@ -13,7 +13,7 @@
             <div class="navbar-brand">CRUD Demo</div>
             <ul>
                 <li>
-                    <a href="~/persons/index">Persons</a>
+                    <a asp-controller="Persons" asp-action="Index">Persons</a>
                 </li>
             </ul>
         </div>
