--- a/crud-example/CRUDExample/Views/Shared/_Layout.cshtml
+++ b/crud-example/CRUDExample/Views/Shared/_Layout.cshtml
@@ -10,7 +10,9 @@
 <body>
     <div class="container">
         <div class="navbar">
-            <div class="navbar-brand">CRUD Demo</div>
+            <div class="navbar-brand">
+                <img src="~/img/logo.png" width="50px" asp-append-version="true"/>
+            </div>
             <ul>
                 <li>
                     <a asp-controller="Persons" asp-action="Index">Persons</a>
