--- a/crud-example/CRUDExample/Views/Shared/_Layout.cshtml
+++ b/crud-example/CRUDExample/Views/Shared/_Layout.cshtml
@@ -25,5 +25,6 @@
     </div>
     
     @RenderSection("scripts", required : false)
+    <script src="~/js/site.js" asp-append-version="true"></script>
 </body>
 </html>
