--- a/crud-example/CRUDExample/Views/Persons/Create.cshtml
+++ b/crud-example/CRUDExample/Views/Persons/Create.cshtml
@@ -3,7 +3,6 @@
     ViewBag.Title = "Add Person";
 }
 
-<a asp-controller="Persons" asp-action="Index" class="link-hover">Back to Persons List</a>
 <h2>Create Person</h2>
 
 <div class="center-box">
@@ -92,6 +91,7 @@
             </div>
             <div class="flex-1">
                 <button class="button button-green-back">Create</button>
+                <a asp-controller="Persons" asp-action="Index" class="button button-blue-back">Go Back</a>
 
                 <div asp-validation-summary="All" class="text-red">
                     @if (ViewBag.Errors != null)
